Group users commit